@@ -1,5 +1,17 @@
 2015-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/utility.c (GlobExpression): Remove use of IsSubimage().
+
+	* magick/image.c (IsSubimage): Re-implement with a more robust
+	solution.  Combined with fixes to ps.c and pdf.c, allows selecting
+	specific pages, as well as re-ordering.
+
+	* coders/ps.c (ReadPSImage): Set image frame scene ids
+	appropriately.
+
+	* coders/pdf.c (ReadPDFImage): Set image frame scene ids
+	appropriately.
+
 	* magick/utility.c (TranslateTextEx): -format %Q should report
 	JPEG quality estimate if it is available.  Resolves SourceForge
 	bug #293 "gm identify bug?".
